--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,12 @@
-html,
+
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  display: flex;
+  /* flex-direction: column; */
+  width: auto;
 }
 
 a {
@@ -12,5 +15,16 @@ a {
 }
 
 * {
+  box-sizing: border-box;
+  /* display: flex;
+  flex-direction: column; */
+}
+
+#__next {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   box-sizing: border-box;
 }
